force-app/main/default/objects/Direccion__c/Direccion__c.object-meta.xml
<CustomObject>
    <description>Objeto para guardar las direcciones de clientes y prospectos.</description>
    <label>Direccion</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Numero Direccion</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Direcciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>