force-app/main/default/objects/Direccion__c/fields/Avenida__c.field-meta.xml
<CustomField>
    <fullName>Avenida__c</fullName>
    <description>Avenida de la dirección.</description>
    <label>Avenida</label>
    <length>255</length>
    <type>Text</type>
</CustomField>