force-app/main/default/objects/Direccion__c/fields/Barrio__c.field-meta.xml
<CustomField>
    <fullName>Barrio__c</fullName>
    <label>Barrio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>