force-app/main/default/objects/Direccion__c/fields/Bloque__c.field-meta.xml
<CustomField>
    <fullName>Bloque__c</fullName>
    <label>Bloque</label>
    <length>255</length>
    <type>Text</type>
</CustomField>