force-app/main/default/objects/Direccion__c/fields/Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Ciudad__c</fullName>
    <description>Ciudad de la dirección</description>
    <label>Ciudad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>