force-app/main/default/objects/Direccion__c/fields/Colonia__c.field-meta.xml
<CustomField>
    <fullName>Colonia__c</fullName>
    <description>Colonia de la dirección.</description>
    <label>Colonia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>