force-app/main/default/objects/Direccion__c/fields/Direccion_Completa__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Completa__c</fullName>
    <description>Dirección completa</description>
    <inlineHelpText>Dirección completa</inlineHelpText>
    <label>Dirección Completa</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>