force-app/main/default/objects/Direccion__c/fields/Identificador__c.field-meta.xml
<CustomField>
    <fullName>Identificador__c</fullName>
    <description>Campo de identificación externa de la identificación de la direccion.</description>
    <label>Identificador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>