force-app/main/default/objects/Direccion__c/fields/Nro_Casa__c.field-meta.xml
<CustomField>
    <fullName>Nro_Casa__c</fullName>
    <description>Numero de casa de la dirección</description>
    <label>Nro Casa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>