force-app/main/default/objects/Direccion__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <description>Pais de a dirección</description>
    <label>Pais</label>
    <length>255</length>
    <type>Text</type>
</CustomField>