force-app/main/default/objects/Direccion__c/fields/Referencia__c.field-meta.xml
<CustomField>
    <fullName>Referencia__c</fullName>
    <description>Referencia de la dirección</description>
    <label>Referencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>