force-app/main/default/objects/Direccion__c/fields/Tipo_Direccion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Direccion__c</fullName>
    <description>Categoriza el tipo de dirección</description>
    <label>Tipo Dirección</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Domicilio</fullName>
            </value>
            <value>
                <fullName>Trabajo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>